Added DOM files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--=========================== Unicons ===========================-->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
+    <!--========================== Swiper CSS =========================-->
+
+
+    <!--============================= CSS =============================-->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+
     <title>Susanto Mahato | Web Developer</title>
 </head>
 <body>
-    
+    <!--============================ Header ===========================-->
+
+
+    <!--============================= Main ============================-->
+    <main class="main">
+
+    </main>
+
+    <!--============================ Footer ===========================-->
+
+
+    <!--========================== Scroll Top =========================-->
+
+
+    <!--========================== Swiper JS ==========================-->
+
+
+    <!--=========================== Main JS ===========================-->
+    <script src="js/main.js"></script>
 </body>
 </html>
